# blog

./: .gitignore  .nojekyll  LICENSE  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  pyproject.toml  requirements.txt  requirements_feed.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: action.yml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/listing/: listing-cache.json
.quarto/xref/: 02c6b2d3  13f55a0b  21307e47  2cdfc18d  4a29ee9d  94c35132  95fc847c  9c4d8310  INDEX  c791e712  f07b5aeb
_site/: about.html  index-listing.json  index.html  robots.txt  search.json  sitemap.xml
_site/feed/: index-listing.json  index.html  index.xml
feed/: feed.yaml  index.html  index.qmd  index.xml  news.yaml  update_feed.py
post-in-progress/intro-macro/: index.html
post-in-progress/tsmom/: index.html
posts/_intro-macro/: index.qmd
posts/_plots/: figure.py
posts/alocacao_moderna_de_investimentos/: entropy_pooling.py  index.ipynb
posts/arquitetura-fundos-prev/: index.html  index.qmd
posts/divida_publica/: dados_imf_divida.xls  index.html  index.qmd  juros_longo_prazo.xls  pib.xls
posts/ettj/: index.html  index.qmd
posts/finbert-pt-br/: index.html  index.qmd
posts/gestao_titulos_publicos/: index.qmd
posts/intro-macro/: index.html  index.ipynb  index.qmd
posts/ngboost/: ngboost.html
posts/pca/: index.html  index.qmd
posts/post-with-code/: index.html  index.qmd
posts/quebra-de-correlacoes/: index.html  index.qmd
posts/tsmom/: index.html  index.qmd
posts/welcome/: index.qmd  (+1 more)
styles/: leme.scss
(+80 files in other folders)
