[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2"
numpy = "^1.1"
statsmodels = "^0.14.0"
plotly = "^5.18.0"
jupyter = "^1.0.0"
python-dateutil = "^2.8.2"
feedparser = "^6.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
